--- a/loadbalancer/nginx.conf
+++ b/loadbalancer/nginx.conf
@@ -6,12 +6,12 @@ http {
     }
  
     upstream websocket {
-        server 0.0.0.0:3000;
-        server 0.0.0.0:3001;
+        server ws1:8080;
+        server ws2:8080;
     }
  
     server {
-        listen 8020;
+        listen 80;
         location / {
             proxy_pass http://websocket;
             proxy_http_version 1.1;
