--- a/ws/package.json
+++ b/ws/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
+    "redis": "^4.4.0",
     "ws": "^8.10.0"
   }
 }
